--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CFLAGS = -c -ansi -Wall -pedantic
 
-lbst_test: main.o lbst.o lbst_helper.o
-	gcc main.o lbst.o lbst_helper.o -o lbst_test
+lbst_demo: main.o lbst.o lbst_helper.o
+	gcc main.o lbst.o lbst_helper.o -o lbst_demo
 
 lbst_helper.o: lbst_helper.c lbst_helper.h lbst.h lbst_public.h
 	gcc $(CFLAGS) lbst_helper.c
@@ -13,4 +13,4 @@ lbst.o: lbst.c lbst.h lbst_public.h
 	gcc $(CFLAGS) lbst.c
 
 clean:
-	rm -rf *.o lbst_test
+	rm -rf *.o lbst_demo
