--- a/src/Makefile
+++ b/src/Makefile
@@ -3,13 +3,13 @@ CFLAGS = -c -ansi -Wall -pedantic
 lbst_demo: main.o lbst.o lbst_helper.o
 	gcc main.o lbst.o lbst_helper.o -o lbst_demo
 
-lbst_helper.o: lbst_helper.c lbst_helper.h lbst.h lbst_public.h
+lbst_helper.o: lbst_helper.c lbst_helper.h lbst.h lbst_private.h
 	gcc $(CFLAGS) lbst_helper.c
 
-main.o: main.c lbst_public.h lbst_helper.h
+main.o: main.c lbst.h lbst_helper.h
 	gcc $(CFLAGS) main.c
 
-lbst.o: lbst.c lbst.h lbst_public.h
+lbst.o: lbst.c lbst.h lbst_private.h
 	gcc $(CFLAGS) lbst.c
 
 clean:
