--- a/src/Makefile_sanitizer
+++ b/src/Makefile_sanitizer
@@ -1,12 +1,12 @@
 CFLAGS = -c -ansi -Wall -pedantic
 
-lbst_demo: main.o lbst.o lbst_helper.o
-	gcc main.o lbst.o lbst_helper.o -o lbst_demo -fsanitize=address -static-libasan
+lbst_demo: main.o lbst.o lbst_private.o
+	gcc main.o lbst.o lbst_private.o -o lbst_demo -fsanitize=address -static-libasan
 
-lbst_helper.o: lbst_helper.c lbst_helper.h lbst.h lbst_private.h
-	gcc $(CFLAGS) lbst_helper.c -fsanitize=address -g
+lbst_private.o: lbst_private.c lbst_private.h
+	gcc $(CFLAGS) lbst_private.c -fsanitize=address -g
 
-main.o: main.c lbst.h lbst_helper.h
+main.o: main.c lbst.h lbst_private.h
 	gcc $(CFLAGS) main.c -fsanitize=address -g
 
 lbst.o: lbst.c lbst.h lbst_private.h
